# muehlespiel

./: .gitignore  Cargo.toml  Readme.md  input_felder.txt  output.txt  parent_debug.txt  shell.nix
src/: constants.rs  datastructures.rs  main.rs  millgame.rs  monte_carlo.rs  test.rs
src/agent/: agent.rs  evaluation.rs  minimax.rs  mod.rs
src/agents/: agent.rs  mod.rs
src/agents/mcts/: mcts_agent.rs  mod.rs  node.rs
src/agents/minimax/: minimax_agent.rs  mod.rs
src/agents/simple/: mod.rs  simple_placing_agent.rs
src/ai/: agent.rs  evaluation.rs  minimax.rs
src/datastructures/: board_equivalence_class_iterator.rs  board_set.rs  direction.rs  encodable.rs  game_board.rs  history.rs  location.rs  mod.rs  phase.rs  piece.rs  team.rs  turn.rs
src/iterators/: action_iterator.rs  board_equivalence_class_iterator.rs  child_turn_iterator.rs  location_iterator.rs  lost_positions_by_cant_move_iterator.rs  lost_positions_by_pieces_taken_iterator.rs  lost_positions_iterator.rs  mill_iterator.rs  mod.rs  n_range_locations_iterator.rs  neighbours_iterator.rs  parent_board_iterator.rs  parent_board_iterator2.rs  takeables_iterator.rs  turn_iterator.rs
src/modes/: ai.rs  enumerate_actions.rs  mod.rs  player_vs_player.rs  print_board.rs
src/producer/: complete_search.rs  mod.rs
src/producer/lost_positions/: by_cant_move.rs  by_pieces_taken.rs  lost_positions.rs  (+1 more)
src/structs/: action.rs  game_phase.rs  location.rs  mill_group.rs  mod.rs  rule.rs  slide_offset.rs  team.rs  turn.rs
src/types/: game_board.rs  game_board_history_counter.rs  game_context.rs  mod.rs
(+12 files in other folders)
