[package]
name = "muehlespiel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
fnv = "1.0.3"
timer = "0.2.0"
chrono = "0.4.31"
rayon = "1.8.1"

[profile.release]
# get (potentually) free performance (https://nnethercote.github.io/perf-book/build-configuration.html#maximizing-runtime-speed)
codegen-units = 1
lto = "thin" # somehow performs better than "fat". Last tested on producing lost positions